--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       </ul>
    </header>
    <section>
-      <img src="./assets/icons/stars.png" id="stars" alt="" />
-      <img src="./assets/icons/moon.png" id="moon" alt="" />
-      <img src="./assets/icons/mountains_behind.png" id="mountains_behind" alt="" />
+      <img src="./assets/icons/stars.png" id="stars" />
+      <img src="./assets/icons/moon.png" id="moon" />
+      <img src="./assets/icons/mountains_behind.png" id="mountains_behind" />
       <h2 id="text">Wepro/Madad</h2>
       <a href="#sec" id="btn">Explore</a>
-       
-      <img src="./assets/icons/mountains_front.png" id="mountains_front" alt="" />
+
+      <img src="./assets/icons/mountains_front.png" id="mountains_front" />
    </section>
    <div class="sec" id="sec">
       <h2>Хочешь так же? делай так же</h2>
